# localvpn-rust

./: .gitignore
.cargo/: config
android/Project/app/: build.gradle
android/Project/app/src/androidTest/java/com/training/project/: ExampleInstrumentedTest.java
android/Project/app/src/main/: AndroidManifest.xml
android/Project/app/src/main/java/com/training/project/: LocalVpn.java  MainActivity.java  com_training_project_LocalVpn.h
android/Project/app/src/main/res/layout/: activity_main.xml
android/Project/app/src/test/java/com/training/project/: ExampleUnitTest.java
android/Project/gradle/wrapper/: gradle-wrapper.properties
initial_setup/: README.md  setup.bat
rust-core/: Cargo.toml  cmp.cmd
rust-core/src/: TODO.md  lib.rs
rust-core/src/tun/: kernel.rs
rust-core/src/tun/kernel/: kernel_loop.rs
rust-core/src/tun/packet_system/: ip_packet.rs  ipv4packet.rs  ipv6packet.rs  mod.rs  tcppacket.rs  udppacket.rs
