[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(target_os="android")'.dependencies]

[lib]
crate-type = ["dylib"]

[dependencies]
android_logger = "0.11.1"
jni = "0.20.0"
lazy_static = "1.4.0"
log = "0.4.17"
mio = {version="0.8.5",features=["os-poll","net","os-ext"]}
